src/components/RadioFilter/styles.sass
@import "~@shared/styles/colors.sass"
@import "~@shared/styles/breakpoints.sass"

.radioFilter

  ul
    display: flex
    list-style: none
    margin: 0
    padding: 0
    overflow: hidden
    vertical-align: middle
    background-color: $background-grey

  li
    overflow: hidden
    border-right: 1px solid white
    margin-right: -1px
    font-size: 12px
    font-weight: bold
    font-style: italic
    flex: 1 1 auto
    text-align: center
    color: $dark-grey
    min-width: 100px

    @include breakpoint(small)
      font-size: 11px

    &:nth-child(2)
      color: $bordeaux

      &.active
        background-color: $bordeaux

    &:nth-child(3)
      color: $blue

      &.active
        background-color: $blue

    &.active
      background-color: $dark-grey
      color: white
      border: 0

  input
    position: absolute
    left: -200px

    &:checked + .fakeInput
      background-color: #595959

    &:checked + .fakeInput::after
      content: ''
      position: absolute
      top: 3px
      left: 3px
      width: 3px
      height: 3px
      border-radius: 3px
      background-color: white

    &:focus + .fakeInput
      outline: 1px solid #595959

  .fakeInput
    position: relative
    display: inline-block
    margin-right: 5px
    width: 9px
    height: 9px
    border-radius: 9px
    border: 3px solid #595959
    cursor: pointer
    margin-left: 1px

  label
    display: flex
    justify-content: center
    align-items: center
    padding: 8px 10px
    height: 100%
    cursor: pointer

